--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,26 @@
         <item>8</item>
         <item>9</item>Í
     </string-array>
+    <string-array name="gestureNameList">
+        <item>default</item>
+        <item>LightOn</item>
+        <item>LightOff</item>
+        <item>FanOn</item>
+        <item>FanOff</item>
+        <item>FanUp</item>
+        <item>FanDown</item>
+        <item>SetThermo</item>
+        <item>Num0</item>
+        <item>Num1</item>
+        <item>Num2</item>
+        <item>Num3</item>
+        <item>Num4</item>
+        <item>Num5</item>
+        <item>Num6</item>
+        <item>Num7</item>
+        <item>Num8</item>
+        <item>Num9</item>Í
+    </string-array>
     <string-array name="gestureIDList">
         <item>default</item>
         <item>h_light_on</item>
@@ -42,4 +62,7 @@
     </string-array>
     <string name="replayBtn">Replay</string>
     <string name="practiceBtn">Practice</string>
+    <string name="recordBtn">Record</string>
+    <string name="recording">Recording…</string>
+    <string name="uploadBtn">Upload</string>
 </resources>
